--- a/animals_template.html
+++ b/animals_template.html
@@ -69,7 +69,7 @@
 <body>
     <h1>My Animal Repository</h1>
     <ul class="cards">
-        <li class="cards__item"><div class="card__title">Cactus Mouse</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/><strong>Location:</strong> North-America<br/><strong>Type:</strong> rodent<br/></p></li><li class="cards__item"><div class="card__title">Dormouse</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/><strong>Location:</strong> Africa<br/><strong>Type:</strong> Mammal<br/></p></li><li class="cards__item"><div class="card__title">Grasshopper Mouse</div><p class="card__text"><strong>Diet:</strong> Carnivore<br/><strong>Location:</strong> Central-America<br/><strong>Type:</strong> Rodent<br/></p></li><li class="cards__item"><div class="card__title">Grey Mouse Lemur</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/><strong>Location:</strong> Africa<br/><strong>Type:</strong> Mammal<br/></p></li><li class="cards__item"><div class="card__title">Mouse</div><p class="card__text"><strong>Diet:</strong> Herbivore<br/><strong>Location:</strong> Africa<br/><strong>Type:</strong> Mammal<br/></p></li>
+        __REPLACE_ANIMALS_INFO__
     </ul>
 </body>
 </html>
